[package]
name = "eden-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.1", features = ["rt"] }
tokio-stream = "0.1.14"
futures-util = "0.3.30"
url = "2.5"
tracing = "0.1.40"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = { version = "1.0.111", features = ["raw_value"] }
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
eyre =  "0.6"
ethers-core = "2.0.11"
alloy-rpc-types = { git = "https://github.com/alloy-rs/alloy.git", rev = "87de288dd3e6258ff634ce147f5fd06382d29660" }

[dev-dependencies]
tokio = { version = "1.35.1", features = ["rt", "macros"] }
